Created project and Project inner pages

--- a/blog.html
+++ b/blog.html
@@ -99,7 +99,7 @@
             </div>
         </div>
         <div class="col-xl-3 col-md-6 col-12 blog">
-            <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY">
+            <div class="blog__video__container" childIframe="https://www.youtube.com/embed/tgbNymZ7vqY?controls=0">
                 <img src="assets/images/portfolio-image.png" class="blog__image" width="415" alt="Blog">
             </div>
             <div>
