--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     <img src="assets/images/logo.png" alt="Logo" class="menu__logo">
     <ul class="menu">
         <li><a href="./index.html" class="menu__item text-default">Home</a></li>
-        <li><a href="#" class="menu__item text-default active">Services</a></li>
-        <li><a href="#" class="menu__item text-default">Plans</a></li>
+        <li><a href="#services" class="menu__item text-default active">Services</a></li>
+        <li><a href="#plans" class="menu__item text-default">Plans</a></li>
         <li><a href="./portfolio.html" class="menu__item text-default">Portfolio</a></li>
         <li><a href="./blog.html" class="menu__item text-default">Blog</a></li>
         <li><a href="./about-us.html" class="menu__item text-default">About us</a></li>
-        <li><a href="#" class="menu__item text-default">Contacts</a></li>
+        <li><a href="#footer" class="menu__item text-default">Contacts</a></li>
     </ul>
     <div class="menu__lang">
         <span class="menu__lang__selected text-default d-flex">Eng</span>
@@ -83,7 +83,7 @@
                     <button class="hexagon__button hexagon__transparent top__section-right telegram"></button>
                 </div>
                 <div class="hexagon__shadow">
-                    <button class="hexagon__button top__section-right start-project text-default">Start Project</button>
+                    <button class="hexagon__button hexagon__transparent top__section-right start-project text-default">Start Project</button>
                 </div>
             </div>
 
@@ -99,7 +99,7 @@
     </div>
 
     <!--  Service section  -->
-    <div class="row section">
+    <div class="row section" id="services">
         <div class="col-xl-12 section__header">
             <p class="section__title">Beebrand offers the following services</p>
             <img src="assets/images/icons/line.svg" class="section__title__line" alt="header">
@@ -383,7 +383,7 @@
     </div>
 
     <!--  Pricing plans section  -->
-    <div class="row section">
+    <div class="row section" id="plans">
         <div class="col-xl-12 section__header">
             <p class="section__title">Pricing Plans</p>
             <p class="section__description">Donec vulputate urna sed rutrum venenatis. Cras consequat magna quis arcu
@@ -546,7 +546,7 @@
     </div>
 
 </div>
-<div class="footer">
+<div class="footer" id="footer">
     <div class="footer__content d-flex">
         <div class="footer__block footer__logo">
             <img class="footer__logo__icon" src="./assets/images/icons/logo.svg" alt="Logo">
