--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="assets/styles/main.css?v=1.0">
-    <link rel="stylesheet" href="assets/styles/portfolio.css?v=1.0">
+    <link rel="stylesheet" href="assets/styles/projects.css?v=1.0">
     <link rel="stylesheet" href="assets/styles/media.css?v=2.0">
 
     <link rel="stylesheet" type="text/css" href="assets/styles/slick/slick.css"/>
@@ -58,107 +58,75 @@
 
 <div class="container">
     <!--  Top section  -->
-    <div class="row">
-        <div class="col-12">
-            <ul class="section__portfolio__filter d-flex">
-                <li><a href="#">All</a></li>
-                <li><a href="#" class="active">Photo</a></li>
-                <li><a href="#">Video</a></li>
-                <li><a href="#">Design</a></li>
-                <li><a href="#">Web</a></li>
-                <li><a href="#">Branding</a></li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="row page__description">
-        <div class="col-xl-6 col-12 d-flex page__description__left">
-            <div class="service__hexagon page__description__hexagon hx-0">
-                <span class="portfolio__hexagon__text">Product photo</span>
-            </div>
-            <div class="service__hexagon page__description__hexagon hx-1">
-                <span class="portfolio__hexagon__text">Product photo</span>
-            </div>
-            <div class="service__hexagon page__description__hexagon hx-2">
-                <span class="portfolio__hexagon__text">Asana</span>
-            </div>
-            <div class="service__hexagon page__description__hexagon hx-3">
-                <span class="portfolio__hexagon__text">Other Product</span>
-            </div>
-            <div class="service__hexagon page__description__hexagon hx-4">
-                <span class="portfolio__hexagon__text">Other Product</span>
-            </div>
-        </div>
-        <div class="col-xl-6 col-12">
-            <p class="text-default page__description__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummyLorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummyLorem Ipsum is simply dummy text of the printing and
-                typesetting industry.
-            </p>
-        </div>
-    </div>
     <div class="row section">
         <div class="col-xl-12 section__header">
-            <p class="section__title">Portfolio</p>
-            <p class="section__description">Here are our latest portfolio items. Please take a look and send us your
-                opinion</p>
+            <p class="section__title">Project Name</p>
             <img src="assets/images/icons/line.svg" class="section__title__line" alt="header">
+            <div class="about__project__header d-flex">
+                <h2 class="about__project__subtitle text-default">About Project</h2>
+                <p class="section__description">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry.
+                    Lorem Ipsum has been the industry's standard dummyLorem Ipsum is simply dummy text of the printing
+                    and
+                    typesetting industry. Lorem Ipsum has </p>
+            </div>
         </div>
-        <div class="col-xl-12 section__portfolio">
-            <div class="row">
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
-                    <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
-                    <a href="./projects.html" class="portfolio__about">
-                        <span class="portfolio__about__title">Lorem Ipsum</span>
-                        <span class="portfolio__about__subtitle">Lorem Ipsum</span>
-                        <img src="assets/images/icons/portfolio-about-hexagon.svg" class="portfolio__about__icon"
-                             alt="icon">
-                    </a>
+        <div class="col-xl-12 section__project">
+            <div class="section__project__slide">
+                <div>
+                    <img src="./assets/images/project-image.png" class="project__slide__item" alt="slide"
+                         data-toggle="modal" data-target="#sliderModal">
                 </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
-                    <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
-                    <div class="portfolio__about">
-                        <span class="portfolio__about__title text-ellipsis">Lorem Ipsum</span>
-                        <span class="portfolio__about__subtitle text-ellipsis">Lorem Ipsum</span>
-                        <img src="assets/images/icons/portfolio-about-hexagon.svg" class="portfolio__about__icon"
-                             alt="icon">
+                <div>
+                    <img src="./assets/images/project-image.png" class="project__slide__item" alt="slide"
+                         data-toggle="modal" data-target="#sliderModal">
+                </div>
+                <div>
+                    <img src="./assets/images/project-image.png" class="project__slide__item" alt="slide"
+                         data-toggle="modal" data-target="#sliderModal">
+                </div>
+            </div>
+            <ul class="project__right__slide">
+                <li><img src="./assets/images/project-image.png" class="project__right__slide__item" alt=""></li>
+                <li><img src="./assets/images/project-image.png" class="project__right__slide__item" alt=""></li>
+                <li><img src="./assets/images/project-image.png" class="project__right__slide__item" alt=""></li>
+            </ul>
+        </div>
+        <div class="col-xl-12 section__footer">
+            <p class="section__footer__text text-default">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to</p>
+            <div class="hexagon__shadow additional-action">
+                <a href="./project-inner.html" class="hexagon__button">About Project</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Slider Modal -->
+<div class="modal fade" id="sliderModal" tabindex="-1" role="dialog" aria-labelledby="sliderModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="modal__slider">
+                    <div>
+                        <img src="./assets/images/project-image.png" alt="slide">
                     </div>
-                </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
-                    <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
-                    <div class="portfolio__about">
-                        <span class="portfolio__about__title text-ellipsis">Lorem Ipsum</span>
-                        <span class="portfolio__about__subtitle text-ellipsis">Lorem Ipsum</span>
-                        <img src="assets/images/icons/portfolio-about-hexagon.svg" class="portfolio__about__icon"
-                             alt="icon">
+                    <div>
+                        <img src="./assets/images/project-image.png" alt="slide">
                     </div>
-                </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
-                    <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
-                    <div class="portfolio__about">
-                        <span class="portfolio__about__title text-ellipsis">Lorem Ipsum</span>
-                        <span class="portfolio__about__subtitle text-ellipsis">Lorem Ipsum</span>
-                        <img src="assets/images/icons/portfolio-about-hexagon.svg" class="portfolio__about__icon"
-                             alt="icon">
+                    <div>
+                        <img src="./assets/images/project-image.png" alt="slide">
                     </div>
-                </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
-                    <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
-                </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
-                    <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
-                </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
-                    <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
-                </div>
-                <div class="col-xl-3 col-md-6 col-12 portfolio">
-                    <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                 </div>
             </div>
         </div>
     </div>
-
 </div>
+
+
 <div class="footer">
     <div class="footer__content d-flex">
         <div class="footer__block footer__logo">
@@ -206,6 +174,15 @@
     </div>
     <p class="footer__copy-right">Copyrights by BEEBRAND</p>
 </div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
 <script type="text/javascript" src="./assets/js/lib/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="./assets/js/lib/jquery-migrate-1.2.1.min.js"></script>
