Fixed menu active states

--- a/blog.html
+++ b/blog.html
@@ -38,12 +38,12 @@
     <img src="assets/images/logo.png" alt="Logo" class="menu__logo">
     <ul class="menu">
         <li><a href="./index.html" class="menu__item text-default">Home</a></li>
-        <li><a href="#" class="menu__item text-default active">Services</a></li>
-        <li><a href="#" class="menu__item text-default">Plans</a></li>
+<!--        <li><a href="#" class="menu__item text-default">Services</a></li>-->
+<!--        <li><a href="#" class="menu__item text-default">Plans</a></li>-->
         <li><a href="./portfolio.html" class="menu__item text-default">Portfolio</a></li>
-        <li><a href="./blog.html" class="menu__item text-default">Blog</a></li>
+        <li><a href="./blog.html" class="menu__item text-default active">Blog</a></li>
         <li><a href="./about-us.html" class="menu__item text-default">About us</a></li>
-        <li><a href="#" class="menu__item text-default">Contacts</a></li>
+        <li><a href="#footer" class="menu__item text-default">Contacts</a></li>
     </ul>
     <div class="menu__lang">
         <span class="menu__lang__selected text-default d-flex">Eng</span>
@@ -177,7 +177,7 @@
         </div>
     </div>
 </div>
-<div class="footer">
+<div class="footer" id="footer">
     <div class="footer__content d-flex">
         <div class="footer__block footer__logo">
             <img class="footer__logo__icon" src="./assets/images/icons/logo.svg" alt="Logo">
