--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <nav class="nav__menu d-flex">
     <img src="assets/images/logo.png" alt="Logo" class="menu__logo">
     <ul class="menu">
-        <li><a href="./index.html" class="menu__item text-default">Home</a></li>
-        <li><a href="#services" class="menu__item text-default active">Services</a></li>
+        <li><a href="./index.html" class="menu__item text-default active">Home</a></li>
+        <li><a href="#services" class="menu__item text-default">Services</a></li>
         <li><a href="#plans" class="menu__item text-default">Plans</a></li>
         <li><a href="./portfolio.html" class="menu__item text-default">Portfolio</a></li>
         <li><a href="./blog.html" class="menu__item text-default">Blog</a></li>
@@ -92,6 +92,7 @@
             <div>
                 <span class="top__video__close">X</span>
                 <div class="full__screen">
+                    <div class="over-layer"></div>
                     <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1" allowfullscreen class="top__video" width="750" height="550" frameborder="0"></iframe>
                 </div>
                 <svg style="visibility: hidden; position: absolute;" width="0" height="0"
@@ -508,7 +509,7 @@
                     <div class="create__plan__row">
                         <p class="create__plan__row__text text-default">Create your plan and get a discount</p>
                         <div class="hexagon__shadow additional-action">
-                            <button class="hexagon__button">Create New</button>
+                            <button class="hexagon__button hexagon__transparent">Create New</button>
                         </div>
                     </div>
                 </div>
