--- a/about-us.html
+++ b/about-us.html
@@ -74,6 +74,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="team__member">
+                        <div class="background-curtain"></div>
                         <div class="d-flex">
                             <div class="team__member__image">
                                 <div class="service__hexagon team__member__hexagon text-default" style="">
@@ -92,6 +93,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="team__member">
+                        <div class="background-curtain"></div>
                         <div class="d-flex">
                             <div class="team__member__image">
                                 <div class="service__hexagon team__member__hexagon text-default" style="">
@@ -110,6 +112,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="team__member">
+                        <div class="background-curtain"></div>
                         <div class="d-flex">
                             <div class="team__member__image">
                                 <div class="service__hexagon team__member__hexagon text-default" style="">
@@ -128,6 +131,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="team__member">
+                        <div class="background-curtain"></div>
                         <div class="d-flex">
                             <div class="team__member__image">
                                 <div class="service__hexagon team__member__hexagon text-default" style="">
@@ -146,6 +150,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="team__member">
+                        <div class="background-curtain"></div>
                         <div class="d-flex">
                             <div class="team__member__image">
                                 <div class="service__hexagon team__member__hexagon text-default" style="">
@@ -164,6 +169,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="team__member">
+                        <div class="background-curtain"></div>
                         <div class="d-flex">
                             <div class="team__member__image">
                                 <div class="service__hexagon team__member__hexagon text-default" style="">
